wrap conflict resolved

--- a/Main Page.css
+++ b/Main Page.css
@@ -1,10 +1,17 @@
     .yard {
-      width: 1200px;
+      float: left;
+      white-space: nowrap;
+      
+    }
+
+    .div{
+      display: inline-table;
     }
    
     .track {
       padding-top: 10px;
       padding-bottom: 10px;
+      white-space: nowrap;
 
     }
 
@@ -17,12 +24,12 @@
     font-size: 15px;
     background-color: #FFFFFF;
     /*position: relative;*/
-    display: inline-block;
+    /*display: inline-block;*/
     }
 
     .carOneUnit {
     position: absolute;
-    width:70px;
+    width:100%;
     /*height:50px;
     border-radius: 30%;
     border-width: 2px;
@@ -34,7 +41,7 @@
     }
 
     .carTwoUnits {
-    width:140px;
+    width:200%;
     z-index:2;
     position: absolute;
     /*height:50px;    
@@ -49,7 +56,7 @@
     }
 
     .carFiveUnits {
-    width:350px;
+    width:500%;
     z-index:2;
     position: absolute;
     /*height:50px;    
@@ -70,7 +77,7 @@
     border-width: 2px;
     font-size: 15px;
     background-color: #CDCDEE;
-    display: inline-block;
+    display: inline-table;
     position: relative;
     /*z-index:1;*/
     left: 100px;
@@ -150,7 +157,7 @@ background: -webkit-radial-gradient(center, ellipse cover,  #ffd65e 0%,#febf04 1
 background: -o-radial-gradient(center, ellipse cover,  #ffd65e 0%,#febf04 100%); /* Opera 12+ */
 background: -ms-radial-gradient(center, ellipse cover,  #ffd65e 0%,#febf04 100%); /* IE10+ */
 background: radial-gradient(ellipse at center,  #ffd65e 0%,#febf04 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffd65e', endColorstr='#febf04',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffd65e', endColorstr='#febf04',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */overflow: scroll;
 
      }
 
